# Wuwa_Mod_Fixer

./: .gitignore  Cargo.toml  LICENSE  README.md  README_en.md  build.rs  config.json  config.yml  package-lock.json  package.json  release_notes.json
.github/workflows/: release.yml  sync.yml  validate.yml
config/: characters.json  characters_states.json  lang.json  version.json
scripts/: compile_config.js
src/: cli.rs  collector.rs  config_loader.rs  gui.rs  main.rs  rollback.rs  settings.rs
src-core/: Cargo.toml  build.rs
src-core/src/: collector.rs  config_loader.rs  lib.rs  mod_fixer.rs  rollback.rs  settings.rs
src-core/src/localization/: config.rs  macros.rs  mod.rs
src-core/src/resources/: FixAeroRoverFemaleChargedEyesMap.dds  RoverFemale_Componet5_TexCoord.buf
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  error.rs  main.rs
src-tauri/src/commands/: config.rs  fix.rs  mod.rs  rollback.rs  settings.rs  shell.rs  updater.rs
src-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-ui/src/: App.vue  style.css
src-ui/src/components/: LogConsole.vue  Rollback.vue  UpdateModal.vue
src-ui/src/i18n/: index.ts
src-ui/src/i18n/locales/: en.json  ja.json  ko.json  ua.json  zh-Hant.json  zh-TW.json  zh.json
src-ui/src/stores/: fix.ts  settings.ts  update.ts
src/localization/: config.rs  macros.rs  mod.rs
