[package]
name = "Wuwa_Mod_Fixer"
version = "2.2.3"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4"
backtrace = "0.3"
env_logger = "0.9.0"
anyhow = "1.0"
inquire = "0.7.5"
walkdir = "2.3"
regex = "1.5"
once_cell = "1.21.0"
sys-locale = "0.3.2"
ureq = { version = "2.9.0", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }
semver = "1.0"
chrono = "0.4"
futures = "0.3"
winreg = "0.55.0"

[build-dependencies]
winres = "0.1.12"